tests/files/fail/wrong_types_array.sol
let mut this_is_an_array = ["test", 1];
